fix: flickering navbar (PR #498)
See: https://github.com/readium/readium-desktop/issues/294#issuecomment-516430676

--- a/src/renderer/assets/styles/header.css
+++ b/src/renderer/assets/styles/header.css
@@ -124,7 +124,7 @@
 		left: unset;
 		right: 3.75rem;
 		width: fit-content;
-		top: 0px;
+		top: 124px;
 		z-index: 150;
 		height: 1rem;
 		font-size: 0.7rem;
